--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
 asgiref==3.3.4
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Django==3.2
 Flask==1.1.2
+gunicorn==20.1.0
+heroku==0.1.4
+idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 joblib==1.0.1
 MarkupSafe==1.1.1
 nltk==3.5
 numpy==1.20.2
+python-dateutil==1.5
 pytz==2021.1
 regex==2021.4.4
+requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.6.2
 sklearn==0.0
 sqlparse==0.4.1
 threadpoolctl==2.1.0
 tqdm==4.60.0
+urllib3==1.26.4
 Werkzeug==1.0.1
